dark mode fixes

--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -5,15 +5,17 @@ i {
  cursor: pointer;
 }
 
-body{
- height: 100vh;
+body, html {
+ height: 100%;
  width: 100%;
+ margin: 0;
 }
 
 .wholeapp {
  background-color: #DBDBD3;
  width: 100%;
  height: 100%;
+ overflow: hidden;
  transition: filter 0.3s;
 }
 
